Fixed build for 26