@@ -1,7 +1,10 @@
 package org.ships.commands.argument.info;
 
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.ComponentLike;
+import net.kyori.adventure.text.JoinConfiguration;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.core.TranslateCore;
-import org.core.adventureText.format.NamedTextColours;
 import org.core.command.argument.ArgumentCommand;
 import org.core.command.argument.CommandArgument;
 import org.core.command.argument.arguments.operation.ExactArgument;
@@ -47,49 +50,32 @@ public class ShipsInfoArgumentCommand implements ArgumentCommand {
     public boolean run(CommandContext commandContext, String... args) throws NotEnoughArguments {
         CommandSource viewer = commandContext.getSource();
         Collection<ShipType<?>> shipTypes = ShipsPlugin.getPlugin().getAllShipTypes();
-        viewer.sendMessage(AText.ofPlain("----[Ships]----").withColour(NamedTextColours.YELLOW));
-        viewer.sendMessage(AText
-                                   .ofPlain("Ships Version: ")
-                                   .withColour(NamedTextColours.AQUA)
-                                   .append(AText
-                                                   .ofPlain(ShipsPlugin.getPlugin().getPluginVersion().asString())
-                                                   .withColour(NamedTextColours.GOLD)));
-        viewer.sendMessage(AText
-                                   .ofPlain("Ships " + ShipsPlugin.PRERELEASE_TAG + " Version: ")
-                                   .withColour(NamedTextColours.AQUA)
-                                   .append(AText
-                                                   .ofPlain(ShipsPlugin.PRERELEASE_VERSION + "")
-                                                   .withColour(NamedTextColours.GOLD)));
+        viewer.sendMessage(Component.text("----[Ships]----").color(NamedTextColor.YELLOW));
+        viewer.sendMessage(Component.text("Ships Version: ")
+                                   .color(NamedTextColor.AQUA)
+                                   .append(Component.text(ShipsPlugin.getPlugin().getPluginVersion().asString())
+                                                   .color(NamedTextColor.GOLD)));
+        viewer.sendMessage(Component.text("Ships " + ShipsPlugin.PRERELEASE_TAG + " Version: ")
+                                   .color(NamedTextColor.AQUA)
+                                   .append(Component.text(ShipsPlugin.PRERELEASE_VERSION + "")
+                                                   .color(NamedTextColor.GOLD)));
         viewer.sendMessage(this.readVersion(TranslateCore.getPlatform().getDetails()));
         viewer.sendMessage(this.readVersion(TranslateCore.getPlatform().getTranslateCoreDetails()));
         viewer.sendMessage(this.readVersion(TranslateCore.getPlatform().getImplementationDetails()));
-        viewer.sendMessage(AText
-                                   .ofPlain("Vessel Types: ")
-                                   .withColour(NamedTextColours.AQUA)
-                                   .append(AText.ofPlain(shipTypes.size() + "").withColour(NamedTextColours.GOLD)));
+        viewer.sendMessage(Component.text("Vessel Types: ")
+                                   .color(NamedTextColor.AQUA)
+                                   .append(Component.text(shipTypes.size() + "").color(NamedTextColor.GOLD)));
         if (commandContext.getArgument(this, SHIP_TYPE_ARGUMENT) != null) {
-            List<AText> typeText = shipTypes
-                    .stream()
-                    .map(s -> AText.ofPlain(s.getDisplayName()).withColour(NamedTextColours.GOLD))
-                    .collect(Collectors.toList());
-            AText text = null;
-            for (ShipType<?> shipType : shipTypes) {
-                AText displayName = AText.ofPlain(shipType.getDisplayName()).withColour(NamedTextColours.GOLD);
-                if (text == null) {
-                    text = displayName;
-                    continue;
-                }
-                text = text.append(AText.ofPlain(" | ").withColour(NamedTextColours.GREEN)).append(displayName);
-            }
+            List<ComponentLike> shipTypeNames = shipTypes.stream().<ComponentLike>map(shipType -> Component.text(shipType.getDisplayName()).color(NamedTextColor.GOLD)).toList();
+            Component text = Component.join(JoinConfiguration.builder().separator(Component.text(" | ").color(NamedTextColor.GREEN)).build(), shipTypeNames);
             viewer.sendMessage(text);
         }
         return true;
     }
 
-    private AText readVersion(PlatformDetails details) {
-        return AText
-                .ofPlain(details.getName() + ": ")
-                .withColour(NamedTextColours.AQUA)
-                .append(AText.ofPlain(details.getVersion().asString()).withColour(NamedTextColours.GOLD));
+    private Component readVersion(PlatformDetails details) {
+        return Component.text(details.getName() + ": ")
+                .color(NamedTextColor.AQUA)
+                .append(Component.text(details.getVersion().asString()).color(NamedTextColor.GOLD));
     }
 }
